--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -3,14 +3,17 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
-		"test": "node --test"
+		"start": "cross-env NODE_ENV=production node index.js",
+		"dev": "cross-env NODE_ENV=development nodemon index.js",
+		"test": "cross-env NODE_ENV=test node --test"
 	},
 	"author": "",
 	"license": "ISC",
 	"description": "",
 	"devDependencies": {
-		"nodemon": "^3.1.9"
+		"cross-env": "^7.0.3",
+		"nodemon": "^3.1.9",
+		"supertest": "^7.0.0"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
